--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@vercel/blob": "^1.1.1",
+    "chordsheetjs": "^12.3.1",
+    "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
