--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "chordsheetjs": "^12.3.1",
     "dompurify": "^3.2.6",
