--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
